--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack --mode=production",
     "build": "webpack ",
     "test": "jest --config jest.config.json --mode=test --detectOpenHandles --forceExit  --env=node",
-    "dev": "webpack-dev-server --history-api-fallback --mode=development "
+    "dev": "webpack-dev-server --history-api-fallback --mode=development ",
+    "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css"
   },
   "keywords": [],
   "author": "Jonathan",
@@ -20,6 +21,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.19",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
@@ -35,9 +37,14 @@
     "jsdom-global": "3.0.2",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^4.2.0",
     "redux-mock-store": "^1.5.4",
-    "sass-loader": "^10.1.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^4.42.1",
@@ -50,9 +57,19 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
-  }
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jonathanramirezislas/comiendas-tacos.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jonathanramirezislas/comiendas-tacos/issues"
+  },
+  "homepage": "https://github.com/jonathanramirezislas/comiendas-tacos#readme"
 }
