--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
+    "firebase": "^8.3.0",
     "formik": "^2.2.6",
     "history": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
